Remove punctuation and numbers

--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -803,7 +803,7 @@
        "Name: noun_count, Length: 3150, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -911,13 +911,69 @@
        "max     137.000000   102.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[['noun_count','verb_count']].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                            Love my Echo\n",
+       "1                                                Loved it\n",
+       "2       Sometimes while playing a game you can answer ...\n",
+       "3       I have had a lot of fun with this thing My 4 y...\n",
+       "4                                                   Music\n",
+       "                              ...                        \n",
+       "3145      Perfect for kids adults and everyone in between\n",
+       "3146    Listening to music searching locations checkin...\n",
+       "3147    I do love these things i have them running my ...\n",
+       "3148    Only complaint I have is that the sound qualit...\n",
+       "3149                                                 Good\n",
+       "Name: verified_reviews, Length: 3150, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove Punctuations\n",
+    "def punctuation_removal(messy_str):\n",
+    "    clean_list = [char for char in messy_str if char not in string.punctuation]\n",
+    "    clean_str = ''.join(clean_list)\n",
+    "    return clean_str\n",
+    "\n",
+    "data['verified_reviews'] = data['verified_reviews'].apply(punctuation_removal)\n",
+    "data['verified_reviews']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove numbers from the reviews\n",
+    "import re\n",
+    "def drop_numbers(list_text):\n",
+    "    list_text_new = []\n",
+    "    for i in list_text:\n",
+    "        if not re.search('\\d',i):\n",
+    "            list_text_new.append(i)\n",
+    "    return ''.join(list_text_new)\n",
+    "\n",
+    "data['verified_reviews'] = data['verified_reviews'].apply(d)"
    ]
   }
  ],
