--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -960,9 +960,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                            Love my Echo\n",
+       "1                                                Loved it\n",
+       "2       Sometimes while playing a game you can answer ...\n",
+       "3       I have had a lot of fun with this thing My  yr...\n",
+       "4                                                   Music\n",
+       "                              ...                        \n",
+       "3145      Perfect for kids adults and everyone in between\n",
+       "3146    Listening to music searching locations checkin...\n",
+       "3147    I do love these things i have them running my ...\n",
+       "3148    Only complaint I have is that the sound qualit...\n",
+       "3149                                                 Good\n",
+       "Name: verified_reviews, Length: 3150, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Remove numbers from the reviews\n",
     "import re\n",
@@ -973,7 +995,47 @@
     "            list_text_new.append(i)\n",
     "    return ''.join(list_text_new)\n",
     "\n",
-    "data['verified_reviews'] = data['verified_reviews'].apply(d)"
+    "data['verified_reviews'] = data['verified_reviews'].apply(drop_numbers)\n",
+    "data['verified_reviews'] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sentence' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-acd9576966d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msentence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sentence' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Sentence Tokenization\n",
+    "sentence ="
    ]
   }
  ],
