--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
        "Name: verified_reviews, Length: 3150, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "Name: verified_reviews, Length: 3150, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,25 +1018,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sentence' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-acd9576966d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msentence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sentence' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hey.', 'ceijveifvefivfiv fvfjvf.', 'vefijveiv.']\n"
      ]
     }
    ],
    "source": [
     "# Sentence Tokenization\n",
-    "sentence ="
+    "sentence_data = 'Hey. ceijveifvefivfiv fvfjvf. vefijveiv.'\n",
+    "\n",
+    "nltk_tokens = nltk.sent_tokenize(sentence_data)\n",
+    "print(nltk_tokens)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'am', 'Bidhya']\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_data = \"I am Bidhya\"\n",
+    "\n",
+    "nltk_tokens = nltk.word_tokenize(word_data)\n",
+    "print(nltk_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Remove accented characters\n",
+    "# def remove_accented_chars(text):\n",
+    "#     new_text = unicodedata.normalize('NFKD',text).encode('ascii','ignore').decode('utf-8','ignore')\n",
+    "#     return new_text\n",
+    "\n",
+    "# data['verified_reviews'] = data.apply(lambda x: remove_accented_chars(x['verified_reviews']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_special_characters(text):\n",
+    "    pat = r'[^a-zA-Z0-9]'\n",
+    "    return re.sub(pat, ' ', text)\n",
+    "\n",
+    "data['verified_reviews'] = data.apply(lambda x: remove_special_characters(x['verified_reviews']),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Nick', 'likes', 'play', 'game', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# targeting only English Stopwords\n",
+    "stop = stopwords.words('english')\n",
+    "stop_words = []\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "text = \"Nick likes to play game.\"\n",
+    "text_tokens = word_tokenize(text)\n",
+    "\n",
+    "tokens_without_sw = [word for word in text_tokens if not word in stopwords.words()]\n",
+    "\n",
+    "print(tokens_without_sw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like play.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use gensim to remove stopwords\n",
+    "from gensim.parsing.preprocessing import remove_stopwords\n",
+    "\n",
+    "text = 'I like to play.'\n",
+    "filtered_sentence = remove_stopwords(text)\n",
+    "\n",
+    "print(filtered_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
