Add the text classification algo

--- a/Feature Engineering.ipynb
+++ b/Feature Engineering.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for Importing the Dataset\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -21,12 +11,15 @@
        "(3150, 5)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# for Importing the Dataset\n",
+    "import pandas as pd\n",
+    "\n",
     "# lets read the dataset\n",
     "data = pd.read_csv('amazon_alexa.tsv', delimiter = '\\t')\n",
     "\n",
